--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.15",
     "@mui/material": "^5.14.15",
+    "@mui/x-charts": "^6.19.5",
     "axios": "^1.6.5",
     "cookie": "^0.6.0",
     "jsonwebtoken": "^8.5.1",
