--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.6.5",
     "cookie": "^0.6.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.30.1",
     "next": "14.0.0",
     "react": "^18",
     "react-dom": "^18"
